<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_title_dialog_fragment"
        android:orientation="horizontal"
        android:visibility="visible">

        <com.bon.customview.textview.ExtTextView
            android:id="@+id/tvCancel"
            style="@style/StyleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_null_gray_selector"
            android:padding="@dimen/padding_layout"
            android:text="@string/cancel"
            android:textSize="@dimen/font_size_title" />

        <com.bon.customview.textview.ExtTextView
            style="@style/StyleTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            app:textViewFontAssetName="@string/font_regular_display_black" />

        <com.bon.customview.textview.ExtTextView
            android:id="@+id/tvSave"
            style="@style/StyleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_null_gray_selector"
            android:padding="@dimen/padding_layout"
            android:text="@string/done"
            app:textViewFontAssetName="@string/font_regular_display_black"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_size_title" />
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_layout">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.bon.customview.textview.ExtTextView
                style="@style/StyleContent"
                android:gravity="center"
                android:text="@string/month"
                android:visibility="gone" />

            <com.bon.customview.numberpicker.ExtNumberPicker
                android:id="@+id/numPickerMonth"
                style="@style/StyleContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_layout"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.bon.customview.textview.ExtTextView
                style="@style/StyleContent"
                android:gravity="center"
                android:text="@string/day"
                android:visibility="gone" />

            <com.bon.customview.numberpicker.ExtNumberPicker
                android:id="@+id/numPickerDay"
                style="@style/StyleContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_layout"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.bon.customview.textview.ExtTextView
                style="@style/StyleContent"
                android:gravity="center"
                android:text="@string/year"
                android:visibility="gone" />

            <com.bon.customview.numberpicker.ExtNumberPicker
                android:id="@+id/numPickerYear"
                style="@style/StyleContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>