<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.bon.customview.textview.ExtTextView
            android:id="@+id/text_date"
            style="@style/StyleDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            app:textViewFontAssetName="@string/font_display_bold"
            tools:text="Friday, 05/09/2018" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/color_gray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_content">

        <FrameLayout
            android:id="@+id/icon_background"
            android:background="@drawable/bg_red_button_radius"
            android:layout_width="@dimen/icon_large"
            android:layout_height="@dimen/icon_large">

            <ImageView
                android:id="@+id/image_icon"
                android:layout_width="@dimen/icon_small"
                android:layout_height="@dimen/icon_small"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_layout"
            android:layout_marginStart="@dimen/padding_layout"
            android:orientation="vertical">

            <com.bon.customview.textview.ExtTextView
                android:id="@+id/text_content"
                style="@style/StyleDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                app:textViewFontAssetName="@string/font_display_regular"
                tools:text="My super league" />

            <com.bon.customview.textview.ExtTextView
                android:id="@+id/text_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                app:textViewFontAssetName="@string/font_display_regular_italic"
                tools:text="6 minutes ago" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>