<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_text"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/component_radius"
        android:paddingRight="@dimen/padding_layout">

        <com.bon.customview.edittext.ExtEditText
            android:id="@+id/etContent"
            style="@style/StyleContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_content"
            android:layout_marginTop="@dimen/padding_content"
            android:layout_weight="1"
            android:background="@null"
            android:lines="1"
            android:gravity="top|left"
            android:padding="0dp"
            android:textColor="@color/color_edit_text"
            android:textColorHint="@color/color_hint_edit_text"
            app:editTextFontAssetName="@string/font_display_bold"
            tools:hint="@string/app_name" />

        <com.bon.customview.textview.ExtTextView
            android:id="@+id/tvContent"
            style="@style/StyleContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_content"
            android:layout_marginTop="@dimen/padding_content"
            android:layout_weight="1"
            android:background="@null"
            android:padding="0dp"
            android:textColor="@color/color_edit_text"
            android:textColorHint="@color/color_hint_edit_text"
            android:visibility="gone"
            app:textViewFontAssetName="@string/font_display_bold"
            tools:hint="@string/app_name" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ivIcon"
            style="@style/IconTiny"
            app:srcCompat="@drawable/ic_date_range" />
    </LinearLayout>

    <com.bon.customview.textview.ExtTextView
        android:id="@+id/tvError"
        style="@style/StyleDescriptionRed"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/component_radius"
        android:layout_marginRight="@dimen/component_radius"
        android:layout_marginTop="@dimen/padding_content"
        android:padding="0dp"
        app:textViewFontAssetName="@string/font_display_regular_italic"
        tools:text="@string/app_name" />
</LinearLayout>